# apache-airflow-standalone

./: .airflowignore  .dockerignore  .editorconfig  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  common_bash_functions.sh  copy_file_from_remote_git_repo.sh  dev_requirements.in  dev_requirements.txt  docker_build_airflow_local.sh  docker_push_airflow_local.sh  docker_run_airflow_local.sh  pip.conf  pyproject.toml  requirements.in  requirements.txt  setup.cfg
dags/: 001_example_dag.py  __init__.py  dag001_example.py  dag_001_example.py
dags/common_package/: common_module.py
