# ########################################################################################
#  Copyright 2022 Viacheslav Kolupaev; author's website address:
#
#      https://vkolupaev.com/?utm_source=c&utm_medium=link&utm_campaign=airflow_standalone
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
# ########################################################################################


##########################################################################################
# Unified Python project settings file.
#
# First introduced in PEP 518 and later expanded in PEP 517, PEP 621 and PEP 660.
# This file contains build system requirements and information, which are used by pip
# to build the package.
##########################################################################################

[tool.poetry]
name = "airflow-standalone"
version = "0.1.0"
description = ""
authors = ["Viacheslav Kolupaev"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = [
    "https://gitlab.com/vkolupaev/styleguide-config/-/raw/main/styles/nitpick-style.toml",
]

[tool.mypy]
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
files = [
    "dags/**/*.py",
]
exclude = [
    "^dags\\/**\\/__init__\\.py$",
]
python_version = "3.8"
follow_imports = "silent"
disable_error_code = "attr-defined"
verbosity = 0
show_error_codes = true
pretty = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
    "typeguard",
    "dags.*.*",
]
ignore_missing_imports = true
